# revanced-patches

./: .gitignore  CLAUDE.md  README.md  REVERSE_ENGINEER_INSTRUCTIONS.md  build-standalone.bat  build-tiktok.bat  build.gradle.kts  gradle.properties  patch-native.sh  patch-tiktok.bat  settings.gradle.kts  setup.bat
.claude/: settings.local.json
.claude/agents/: tiktok-reverse-engineer.md
.github/workflows/: build-native.yml  release.yml
extensions/: build.gradle.kts
extensions/src/main/java/app/revanced/extension/tiktok/banner/: BannerManager.java
extensions/src/main/java/app/revanced/extension/tiktok/download/: DownloadEnhancer.java  TelegramRedirect.java
extensions/src/main/java/app/revanced/extension/tiktok/emulator/: EmulatorBypass.java
extensions/src/main/java/app/revanced/extension/tiktok/feedfilter/: FeedItemsFilter.java
extensions/src/main/java/app/revanced/extension/tiktok/region/: RegionSpoof.java
extensions/src/main/java/app/revanced/extension/tiktok/remoteconfig/: RemoteConfig.java  RemoteConfigManager.java
extensions/src/main/java/app/revanced/extension/tiktok/settings/: Settings.java  SettingsActivity.java
extensions/src/main/java/app/revanced/extension/tiktok/sslpinning/: SslPinningBypass.java
native/: CMakeLists.txt  build-and-copy.bat  build.bat
native/jni/: Android.mk  Application.mk  tikmod.h
native/src/: feed_processor.cpp  hooks.cpp  settings.cpp  special_clinit.cpp  tikmod.cpp  watermark.cpp
patches/: build.gradle.kts
patches/src/main/resources/tiktok/nativelib/: README.md
(+47 files in other folders)
